--- a/index.html
+++ b/index.html
@@ -4,6 +4,41 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css">
+    <style>
+        h1 {
+            text-align: center;
+        }
+        nav {
+            text-align: center;
+        }
+        nav a {
+            padding: 10px;
+            background-color: grey;
+            text-decoration: navy;
+            color: white;
+            margin: 5px;
+        }
+        figure figcaption {
+            text-align: center;
+            font-size: smaller; 
+        }
+        #featured-property {
+            text-align: center;
+        }
+
+        #featured-property p {
+            width: 800px;
+            margin: auto;
+        }
+         #details div {
+            float: left;
+            width: 20%; 
+            text-align: center;
+            background-color: #db0909; 
+            margin: 10px; 
+        }
+    </style>
   </head>
   <body>
     <header>
