--- a/index.html
+++ b/index.html
@@ -1,52 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
-    <link rel="stylesheet" href="./style.css">
-    <style>
-        h1 {
-            text-align: center;
-        }
-        nav {
-            text-align: center;
-        }
-        nav a {
-            padding: 10px;
-            background-color: grey;
-            text-decoration: navy;
-            color: white;
-            margin: 5px;
-        }
-        figure figcaption {
-            text-align: center;
-            font-size: smaller; 
-        }
-        #featured-property {
-            text-align: center;
-        }
-
-        #featured-property p {
-            width: 800px;
-            margin: auto;
-        }
-         #details div {
-            float: left;
-            width: 20%; 
-            text-align: center;
-            background-color: #db0909; 
-            margin: 10px; 
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">    
   </head>
+
   <body>
     <header>
       <!-- logo -->
       <h1>Exceptional Realty Group</h1>
 
       <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <a href="index.html">About</a> 
+        <a href="new-properties.html">New Properties</a> 
+        <a href="real-estate-listings.html">Listings</a> 
+        <a href="market-report.html">Market Report</a> 
+        <a href="contact.html">Contact</a> 
+        <a href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
 
